--- a/mediatek/mediatek.csproj
+++ b/mediatek/mediatek.csproj
@@ -78,7 +78,7 @@
   </ItemGroup>
   <ItemGroup>
     <Folder Include="controleur\" />
-    <Folder Include="model\" />
+    <Folder Include="modele\" />
     <Folder Include="vue\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
